# scion-cpp

./: .flake8  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  Makefile  README.md  vcpkg.json
.github/workflows/: run-tests.yaml
cmake/: packaging_deb.cmake  version.cmake
docker/: README.md
docker/package/: build.sh
docker/scitra-tun/: README.md
docker/scitra-tun/scitra-tun/: Dockerfile
docs/: nat_traversal.md
examples/: CMakeLists.txt
examples/c/: CMakeLists.txt
examples/c/echo_udp/: main.c
examples/c/echo_udp_async/: main.c
examples/c/include/: console.c  console.h  format.c  format.h
examples/echo_udp/: main.cpp
examples/echo_udp_async/: main.cpp
examples/pmtu/: main.cpp
examples/resolver/: main.cpp
examples/traceroute/: main.cpp
include/scion/: bit_stream.hpp  error_codes.hpp  resolver.hpp  scion.h  scion.hpp  scion_asio.hpp
include/scion/addr/: address.hpp  endpoint.hpp  generic_ip.hpp  isd_asn.hpp  mapping.hpp
include/scion/asio/: addresses.hpp  scmp_socket.hpp  udp_socket.hpp
include/scion/bsd/: scmp_socket.hpp  sockaddr.hpp  socket.hpp  udp_socket.hpp
include/scion/daemon/: client.hpp  co_client.hpp
include/scion/details/: c_interface.hpp  flags.hpp  from_chars.hpp
include/scion/extensions/: extension.hpp  idint.hpp
include/scion/hdr/: details.hpp  idint.hpp  ip.hpp  scion.hpp  scmp.hpp  stun.hpp  tcp.hpp  udp.hpp
include/scion/path/: cache.hpp  decoded_scion.hpp  digest.hpp  path.hpp  path_meta.hpp  policy.hpp  raw.hpp  shared_cache.hpp
include/scion/posix/: scmp_socket.hpp  sockaddr.hpp  udp_socket.hpp  underlay.hpp
include/scion/scmp/: handler.hpp  path_mtu.hpp
include/scion/socket/: flags.hpp  header_cache.hpp  packager.hpp
integration-tests/: all_tests.py
integration-tests/examples/: path_mtu.py  resolver.py  traceroute.py
integration-tests/examples/data/: hosts
integration-tests/interposer/: __init__.py  netcat.py  resolver.py  test_target.py
integration-tests/interposer/config/: scion_interposer.toml
interposer/: CMakeLists.txt  README.md
interposer/include/scion/: path_selector.h
interposer/install/: interposer.toml
interposer/install/debian/: conffiles
interposer/integration/: CMakeLists.txt
interposer/integration/config/: scion_interposer.toml
interposer/integration/src/: resolver.cpp  target.cpp
interposer/man/: scion-interposer.7.md
interposer/src/: builtin_selector.cpp  builtin_selector.h  control_plane.cpp  control_plane.hpp  interposer.cpp  interposer.h  interposer.hpp  libc_interposer.c  log.c  log.h  options.cpp  options.hpp  selector.cpp  selector.hpp
interposer/tests/: main.cpp  socket_wrapper.hpp  test_get_addr_info.cpp  test_get_name_info.cpp  test_udp_socket.cpp
python/: requirements.txt
python/proto/control_plane/v1/: cppki_pb2.py  cppki_pb2.pyi  cppki_pb2_grpc.py  drkey_pb2.py  drkey_pb2.pyi  drkey_pb2_grpc.py  renewal_pb2.py  renewal_pb2.pyi  renewal_pb2_grpc.py  seg_extensions_pb2.py  seg_extensions_pb2.pyi  seg_extensions_pb2_grpc.py  seg_pb2.py  seg_pb2.pyi  seg_pb2_grpc.py  svc_resolution_pb2.py  svc_resolution_pb2.pyi  svc_resolution_pb2_grpc.py
python/proto/crypto/v1/: signed_pb2.py  signed_pb2.pyi  signed_pb2_grpc.py
python/proto/daemon/v1/: daemon_pb2.py  daemon_pb2.pyi  daemon_pb2_grpc.py
python/proto/discovery/v1/: discovery_pb2.py  discovery_pb2.pyi  discovery_pb2_grpc.py
python/proto/drkey/v1/: drkey_pb2.py  (+1 more)
scitra/: CMakeLists.txt  README.md
scitra/docs/: scitra-tun.md
scitra/include/scitra/: packet.hpp  translator.hpp
scitra/include/scitra/linux/: cli_args.hpp  flow.hpp  netlink.hpp  scitra_tun.hpp  socket.hpp  tun.hpp
scitra/include/scitra/scitra-tun/: cli_args.hpp  debug.hpp  error_codes.hpp  flow.hpp  netlink.hpp  scitra_tun.hpp  socket.hpp  sys_net.hpp  tun.hpp
scitra/install/scitra-tun/: scitra-policy.json  scitra-tun.conf
scitra/install/scitra-tun/debian/: conffiles  config-dns  config-routes  scitra-tun.service
scitra/integration-test/: README.md  run_ipv4_tests.py  run_ipv6_tests.py  run_tiny4_bgp.sh  run_tiny6_bgp.sh  setup.sh  stop.sh  teardown.sh
scitra/man/: scitra-policy.json.5.md  scitra-tun.8.md
scitra/src/: packet.cpp  translator.cpp
scitra/src/linux/: error_codes.cpp  main_tun.cpp  netlink.cpp  scitra_tun.cpp  sys_net.cpp
scitra/src/scitra-tun/: error_codes.cpp  main_tun.cpp  netlink.cpp  scitra_tun.cpp  socket.cpp  sys_net.cpp  tui.cpp  version.cpp.in
scitra/tests/: main.cpp  test_translation.cpp
scitra/tests/data/: address_unreachable.py  no_route_to_destination.py  packet_too_big.py  paths.py  translate_scmp.py  translate_tcp_ipv4.py  translate_udp_ipv4.py  translate_udp_ipv4_local.py  translate_udp_ipv6.py  translate_udp_ipv6_local.py  translate_udp_no_underlay.py
scitra/tools/scion2ip/: CMakeLists.txt  README.md
scitra/tools/scion2ip/man/: scion2ip.1.md
scitra/tools/scion2ip/src/: scion2ip.cpp  version.cpp.in
src/: default_address.cpp  error_codes.cpp  resolver.cpp
src/addr/: endpoint.cpp  generic_ip.cpp  isd_asn.cpp
src/daemon/: client.cpp
src/hdr/: details.cpp
src/path/: path.cpp  policy.cpp
src/scion_c/: scion.c  scion.cpp
tests/: utilities.cpp  utilities.hpp
tests/addr/: test_address.cpp  test_endpoint.cpp  test_generic_ip.cpp  test_isd_asn.cpp
tests/asio/: test_addresses.cpp  test_scmp_socket.cpp  test_udp_socket.cpp
tests/bsd/: test_udp_socket.cpp
tests/hdr/: test_checksum.cpp  test_idint.cpp  test_scion.cpp  test_scmp.cpp  test_stun.cpp  test_tcp.cpp
tests/hdr/data/: stun.py  stun_expected.py  tcp.py
tests/path/: test_cache.cpp  test_decoded_scion.cpp  test_path.cpp  test_policy.cpp  test_raw_path.cpp
tests/path/data/: path_metadata_3hops.py  paths.py  policy.json  raw_path.py
tests/posix/: test_addr.cpp  test_scmp_socket.cpp  test_udp_socket.cpp
tests/resolver/: test_resolver.cpp
tests/resolver/data/: hosts
tests/scion_c/: test_c_interface.cpp
tests/scmp/: test_path_mtu.cpp
tests/scmp/data/: scmp_packet_quotes.py
tests/socket/: test_packager.cpp  test_parsed_packet.cpp
tests/socket/data/: packets.py
(+12 files in other folders)
